2011-11-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures w.r.t. parallel make and colorization
	* tests/color2.test: Skip the test if the $MAKE program fails to
	consider the standard output as a tty when spawned by `expect'.
	This is required for make implementations, like FreeBSD make and
	Solaris dmake, that redirect the output of recipes to temporary
	files or pipes when run in parallel mode.  Since we are at it,
	simplify the detection of a working `expect' program, and throw
	in other minor simplifications.

2011-11-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in 'distcheck-override-infodir.test'
	* tests/distcheck-override-infodir.test ($required): Add
	'install-info'.

2011-11-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: avoid another failure of 'uninstall-fail.test' on Solaris
	* tests/uninstall-fail.test: On Solaris 10, if `/bin/rm' is run
	with the `-f' option, it doesn't print any error message when
	failing to remove a file (due to e.g., "Permission denied").
	Yikes.  Cater to this incompatibility, by relaxing the test when
	a faulty `rm' is detected.

2011-11-03  Zack Weinberg <zackw@panix.com>  (tiny change)
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	maint-mode: fix botched configure messages
	This change fixes automake bug#9890.
	* m4/maintainer.m4 (AM_MAINTAINER_MODE): Fix the "checking ..."
	configure message related to the enabling/disabling of maintainer
	mode.
	* tests/help-maintainer.test: Renamed ...
	* tests/maintmode-configure-msg.test: ... to this, and extended
	to cover the fixed bug.  Also, since we are at it, make grepping
	of configure help screens stricter, and throw in some few other
	changes to reduce code duplication and enhance readability.
	* tests/Makefile.am (TESTS): Update.
	* THANKS: Update with Zack's new e-mail address.
	Report and initial patch by Zack Weinberg, test cases added by
	Stefano Lattarini.
