@@ -1,5 +1,13 @@
 2011-11-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: testsuite is now safe to run with dmake in parallel mode
+	* tests/defs.in: Unset variables DMAKE_CHILD, DMAKE_DEF_PRINTED
+	and DMAKE_MAX_JOBS, which are exported by Solaris dmake when run
+	in parallel mode, and which might confuse make processes spawned
+	by our testsuite.
+
+2011-11-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: fix spurious failures w.r.t. parallel make and colorization
 	* tests/color2.test: Skip the test if the $MAKE program fails to
 	consider the standard output as a tty when spawned by `expect'.
